# neurogym

./: .bumpversion.toml  .editorconfig  .gitattributes  .gitignore  .mlc-config.json  .ruff.toml  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.dev.md  README.md  __init__.py  call_function.py  debug.py  example_NeuroGym_stable_baselines.ipynb  index.html  mkdocs.yml  mypy.ini  pyproject.toml  ruff.toml  setup.py  sitemap.xml  sonar-project.properties  test_env.py  versions.json
.github/settings/: .linkspector.yml
.github/workflows/: build.yml  build_minimal.yml  cffconvert.yml  docs-test.yml  documentation.yml  linkspector.yml  linting.yml  markdown-links.yml  notebooks.yml  python-package.yml  release_github.yml  release_pypi.yml  sonarcloud.yml  spell_check.yml  static-typing.yml
0.0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1/code_of_conduct/: index.html
0.0.1/contributing/: index.html
0.0.1/installation/: index.html
0.0.1/license/: index.html
0.0.1/neurogym/: index.html
0.0.1/search/: search_index.json
0.1.0/contributing/: index.html
0.1.0/installation/: index.html
0.1.0/neurogym/: index.html
0.1.0/search/: search_index.json
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/code_of_conduct/: index.html
1.0.0/contributing/: index.html
1.0.0/installation/: index.html
1.0.0/license/: index.html
1.0.0/license_info/: index.html
1.0.0/neurogym/: index.html
1.0.0/search/: search_index.json
1.0.3/: index.html  sitemap.xml
1.0.3/code_of_conduct/: index.html
1.0.3/contributing/: index.html
1.0.3/project-license/: index.html
analysis/: analysis.py  analysis_temp.py  old_analysis.py  pca_tests.py  results.sh  utils.py
api/core/: index.html
api/envs/: index.html
api/utils/: index.html
api/wrappers/: index.html
code_of_conduct/: index.html
contributing/: index.html
docs/: code_of_conduct.md  conf.py  conf.template.toml  contributing.md  envs.md  index.md  installation.md  latex_table.py  license.md  main.py  make_docs.py  make_env_md.py  neurogym.md  wrappers.md
docs/api/: core 2.md  envs.md  utils.md  wrappers.md
docs/examples/: annubes.ipynb  conf.demo.toml  conf.toml  config.toml  contextdecisionmaking.ipynb  demo.ipynb  example_annubes.ipynb  example_configuration.ipynb  example_keras.ipynb  example_neurogym_keras.ipynb  example_neurogym_monitoring.ipynb  example_neurogym_pytorch.ipynb  example_neurogym_rl.ipynb  example_neurogym_rnn_rl.ipynb  example_reinforcement_learning.ipynb  example_supervised_learning.ipynb  exercise.py  exercise_person_talk.py  monitoring.ipynb  neuron_activation_traces.ipynb  perceptualdecisionmaking.ipynb  reinforcement_learning.ipynb  supervised_learning_keras.ipynb  supervised_learning_pytorch.ipynb  template.py  understanding_neurogym_task.ipynb  yang19.ipynb
docs/source/: conf.py  contributors.rst  demo.ipynb  envs.rst  example_neurogym_keras.ipynb  example_neurogym_pytorch.ipynb  example_neurogym_rl.ipynb  index.rst  installing.rst  make_envs_rst.py  tags.rst  understanding_neurogym_task.ipynb  video.py  wrappers.rst
docs/tutorials/: generate_notebooks.py
envs/: 2AFC.py  bandit.py  build_env.py  call_function.py  combine.py  compose.py  dawtwostep.py  delaymatchsample.py  delayresponse.py  dpa.py  dual_task.py  gng.py  leverpress.py  manage_data.py  mante.py  matchingpenny.py  monitor.py  nalt_rdm.py  ngym.py  ngym.py.save  padoa_sch.py  pass_action.py  pass_reward.py  pd_wager.py  priors.py  rdm.py  rdm_hist.py  rdm_v1.py  reaction_time.py  readysetgo.py  romo.py  run_sch  task_registrations.py  tasktools.py  test.py  test_batch  test_new.py  tmp_test.py  trial_hist.py
examples/: a2c_example.ipynb  agent.py  annubes_env.ipynb  demo.ipynb  example_NeuroGym_keras.ipynb  example_NeuroGym_keras.py  example_annubes.ipynb  example_neurogym_keras.ipynb  example_neurogym_keras_v2.ipynb  example_neurogym_pytorch.ipynb  example_neurogym_rl.ipynb  network.py  template.py  understanding_neurogym_task.ipynb  unisensory_block.ipynb
examples/demo/: demo.ipynb  index.html
examples/example_annubes/: index.html
examples/example_neurogym_keras/: index.html
examples/example_neurogym_pytorch/: index.html
examples/example_neurogym_rl/: index.html
examples/template/: index.html
examples/understanding_neurogym_task/: index.html
installation/: index.html
license/: index.html
neurogym/: __init__.py  annubes_psychometric.py  core.py  index.html  inputs.py  version.py
neurogym/collections/: example.py
neurogym/conf/: base.py  conf.py  enums.py  logging.py
neurogym/config/: __init__.py  base.py  conf.py  config.py  enums.py  logging.py  types.py
neurogym/docs/: envs.md  make_env_md.py
neurogym/envs/: 2AFC.py  (+58 more)
ops/: build_env.py  put_together_files.py  results_summary.py  task_registrations.py  tasktools.py  test_new.py  utils.py
tests/: __init__.py  log_speed.py  test_annubes_env.py  test_config.py  test_core.py  test_data.py  test_env.py  test_envs.py  test_monitor.py  test_random.py  test_reset_step.py  test_speed.py  test_wrapper.py  test_wrappers.py
v1.0.8/: 404.html  index.html  objects.inv  sitemap.xml
v2.0.0/: 404.html  index.html  objects.inv  sitemap.xml
v2.1.0/: 404.html  index.html  objects.inv  sitemap.xml
v2.2.0/: 404.html  index.html  objects.inv  sitemap.xml
wrappers/: catch_trials.py  combine.py  cv_learning.py  manage_data.py  noise.py  pass_action.py  pass_reward.py  reaction_time.py  side_bias.py  trial_hist.py  trial_hist_nalt.py  trial_hist_reset.py
(+463 files in other folders)
